salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/Messaging_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Messaging Config</label>
</CustomObject>