salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Agent_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Agent_Keyword__c</fullName>
    <defaultValue>"agent"</defaultValue>
    <description>Substring keyword in inbound customer messages that triggers the top notification bar.</description>
    <label>Agent Keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>