salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Auto_Queue_Detector__c.field-meta.xml
<CustomField>
    <fullName>Auto_Queue_Detector__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, automatically detects Chat Queue members dynamically from Apex.</description>
    <label>Auto Queue Detector</label>
    <type>Checkbox</type>
</CustomField>