salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Text__c</fullName>
    <defaultValue>"transmited notification"</defaultValue>
    <description>Automated confirmation message sent back to customer when agent keyword is triggered.</description>
    <label>Confirmation Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>