salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Detect_Joined_Agent__c.field-meta.xml
<CustomField>
    <fullName>Detect_Joined_Agent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, detects if an agent has joined the MessagingSession and targets only that assigned agent.</description>
    <label>Detect Joined Agent</label>
    <type>Checkbox</type>
</CustomField>