salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Disabled_Channel_Ids__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Channel_Ids__c</fullName>
    <description>Comma-separated list of MessagingChannel Record IDs to ignore/disable topbar and HeaderCustom system for.</description>
    <label>Disabled Channel IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>