salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Is_Global_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, top notification bar broadcasts globally to all logged-in users across the org.</description>
    <label>Is Global Default</label>
    <type>Checkbox</type>
</CustomField>