salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Reactivation_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Keyword__c</fullName>
    <defaultValue>"reset"</defaultValue>
    <description>Keyword that reactivates/re-arms the agent notification trigger after it has been muted.</description>
    <label>Reactivation Keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>