salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Reminder_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle whether the automated inactivity reminder system is enabled.</description>
    <label>Reminder Enabled</label>
    <type>Checkbox</type>
</CustomField>