salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Reminder_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Message_Template__c</fullName>
    <defaultValue>"Hello {customer_name}, we noticed you have been waiting for {minutes_passed} minutes. An agent will be with you shortly!"</defaultValue>
    <description>Customizable message template sent to customer when idle threshold is reached. Supports variables: {customer_name}, {minutes_passed}, {agent_keyword}, {channel_name}.</description>
    <label>Reminder Message Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>