salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Reminder_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Inactivity threshold in minutes before sending automatic reminder to customer.</description>
    <label>Reminder Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>