salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Selected_Messaging_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Selected_Messaging_Channel_Id__c</fullName>
    <defaultValue>"ALL"</defaultValue>
    <description>MessagingChannel ID to filter notifications for. Set to "ALL" or blank to automatically follow all deployments.</description>
    <label>Selected Messaging Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>