salesforce-mcp-package/force-app/main/default/objects/Messaging_Config__c/fields/Use_Flow_Routing__c.field-meta.xml
<CustomField>
    <fullName>Use_Flow_Routing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, inspects Omni-Channel Flow Routing (PendingServiceRouting / Queue assignment) for the messaging session and broadcasts top bar to the dynamically routed queue.</description>
    <label>Use Queues &amp; Flow Routing</label>
    <type>Checkbox</type>
</CustomField>